Sat Aug 10 12:39:00 2013  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/parse/test_document_type_declaration.rb: Add tests for
	  parsing document type declaration.

Sat Aug 10 12:00:45 2013  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/parsers/baseparser.rb (REXML::Parsers::BaseParser::SYSTEM):
	  Fix loose "head" match regular expression. It doesn't cause any
	  problem in the current code but it should be fixed because readers
	  may confuse it.
	  Patch by Ippei Obayashi. Thanks!!!

Sat Aug 10 11:58:24 2013  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/parse/test_notation_declaration.rb (#test_system_public):
	  Add a test for PUBLIC notation and SYSTEM notation order case.

Sat Aug 10 11:31:35 2013  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/parsers/baseparser.rb (REXML::Parsers::BaseParser::PUBLIC):
	  Fix loose "head" match regular expression.
	  [Bug #8701] [ruby-dev:47551]
	  Patch by Ippei Obayashi. Thanks!!!
	* test/rexml/parse/test_notation_declaration.rb (#test_system_public):
	  Add a test for the above case.

Sat Aug 10 09:20:21 2013  Zachary Scott  <e@zzak.io>

	* NEWS: [DOC] typo in example reported by @moretea
	  https://github.com/ruby/ruby/commit/a39e724#commitcomment-3831489

Sat Aug 10 09:19:04 2013  Zachary Scott  <e@zzak.io>

	* proc.c: [DOC] rdoc code formatting

Sat Aug 10 09:12:01 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (rb_id_attrset): check if the argument is valid type as an
	  attribute.

Sat Aug 10 05:44:08 2013  Zachary Scott  <e@zzak.io>

	* lib/rss/trackback.rb: [DOC] Hide RSS::Trackback from rdoc
	  Patch by Steve Klabnik [Bug #8755] [ruby-core:56456]

Sat Aug 10 04:52:21 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (big_div_struct): Use size_t.
	  (bigdivrem1): Ditto.
	  (bigdivrem_num_extra_words): Ditto.
	  (bigdivrem_single): Ditto.
	  (bigdivrem_normal): Ditto.
	  (bary_divmod): Ditto.

Fri Aug  9 23:47:15 2013  Kouhei Sutou  <kou@cozmixng.org>
